# artewald-engine-2

./: Cargo.toml  LICENSE  build.rs
assets/shaders/: circle.vert  triangle.frag  triangle.vert
src/: artewald_engine.rs  graphics_and_input_controller.rs  graphics_objects.rs  inputs.rs  lib.rs  main.rs  object_manager.rs  pipeline_manager.rs  sampler_manager.rs  shader_manager.rs  test_objects.rs  vertex.rs  vk_allocator.rs  vk_and_window_controller.rs  vk_controller.rs
