[package]
name = "artewald-engine-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.3+1.3.251", default-features = false, features = ["linked"]}
winit = {version = "0.28.0"}
raw-window-handle = "0.5.0"
ash-window = "0.12.0"
shaderc = {version="0.8.3", features=[]}
nalgebra-glm = {version = "0.18.0", features = ["convert-bytemuck"]}
memoffset = "0.9.0"
image = "0.24.7"
tobj = "4.0.0"